fix: make tables scrollable on mobiles

--- a/client/src/document/ingredients/browser-compatibility-table/index-mobile.scss
+++ b/client/src/document/ingredients/browser-compatibility-table/index-mobile.scss
@@ -21,4 +21,8 @@
   .bc-history-desktop {
     display: none;
   }
+
+  .table-scroll {
+    overflow-x: auto;
+  }
 }
